@@ -74,6 +74,7 @@
         .initImplicitGenerics(where)
         assign("implicitGeneric", .implicitGeneric, envir = where)
         cacheMetaData(where, TRUE, searchWhere = .GlobalEnv, FALSE)
+        assign(".checkRequiredGenerics", ..checkRequiredGenerics,envir = where)
         ## unlock some bindings that must be modifiable
         unlockBinding(".BasicFunsList", where)
          assign(".saveImage", TRUE, envir = where)
